# imreco

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml
imreco/: compressor.py  converter.py  imreco.py  resizer.py
