[tool.poetry]
name = "imreco"
version = "0.1.0"
description = "A python cli program to perform basic operations to images using opencv."
authors = ["tamton-aquib <aquibjavedt007@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
