[tool.poetry]
name = "imreco"
version = "1.0.0"
description = "A cli program to resize images and convert between different formats."
authors = ["Tamton Aquib <aquibjavedt007@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["image", "resizer", "converter", "compresser"]


[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"


[tool.poetry.scripts]
imreco = 'imreco.imreco:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
